# toolbase

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml
docs/: DOCS_SNIPPET_AUDIT_2026-05-06.md  ENVIRONMENTS.md  KNOWN_GAPS.md  PLATFORM_DECISIONS.md  README.md  SERVE_ARCHITECTURE.md  SETUP_RECIPES.md  SETUP_SYSTEM_SPEC.md
docs/archive/: ORCHESTRAL_INTEGRATION_COMPLETE.md  PACKAGE_AGENT_PHASE2_COMPLETE.md  PACKAGE_AGENT_PUBLISH_COMMAND.md  PACKAGE_AGENT_UPDATE.md  PLAN.md  PUBLISH_COMMAND_COMPLETE.md  TESTING_STATUS.md  test_install.py
docs/proposals/: PORTABLE_GROUP_MANIFESTS.md
tests/: test_activate_cli.py  test_auth.py  test_bundle_deps.py  test_bundles.py  test_categories_api.py  test_config_command.py  test_config_local_layer.py  test_connect_claude_code.py  test_connect_codex.py  test_connect_orchestral.py  test_create_command.py  test_create_tarball.py  test_envs_cache.py  test_envs_config.py  test_envs_discovery.py  test_envs_manifest.py  test_envs_paths.py  test_envs_phase3_wiring.py  test_envs_phase4_config.py  test_envs_phase5_list.py  test_envs_phase6_reset.py  test_envs_schema.py  test_expected_toolkits.py  test_host_import_isolation.py  test_host_stderr_capture.py  test_ingest_ast.py  test_ingest_command.py  test_ingest_merge.py  test_ingest_walker.py  test_ingest_yaml_emit.py  test_init_template.py  test_install_bundle_selection.py  test_install_flags.py  test_install_import_file.py  test_interactive_flags.py  test_logger_serve_log_wiring.py  test_login_command.py  test_manifest_local_pins.py  test_naming.py  test_orchestrator_bundles.py  (+28 more)
tests/e2e/: README.md  manual_arxiv_postship_check.md  run_aster_synthetic_e2e.py  run_bundles_e2e.py  run_editable_e2e.py  run_envs_e2e.py  run_ingest_e2e.py  run_install_e2e.py  run_legacy_layout_e2e.py  run_multi_version_e2e.py  run_restart_e2e.py  run_serve_e2e.py  run_setup_e2e.py  run_setup_script_e2e.py  run_tool_groups_e2e.py  run_two_layer_config_e2e.py
toolbase/: __init__.py  _setup_host.py  _toolkit_host.py  astro.py  auth.py  cli.py  config.py  hep.py  ingest.py  naming.py  neutrino.py  quantum.py  skills.py  toolkit.py  validation.py  versioning.py
toolbase/connect/: __init__.py  base.py  claude_code.py  codex.py  orchestral.py
toolbase/envs/: __init__.py  bundle_deps.py  cache.py  config.py  discovery.py  manifest.py  paths.py  schema.py
toolbase/logging/: __init__.py  logger.py
toolbase/serve/: __init__.py  bundles.py  config.py  orchestrator.py  profile_scaffold.py  profiles.py  proxy_tool.py  tool_groups.py
toolbase/setup/: __init__.py  _rpc.py  runner.py  (+7 more)
userdocs/: explanation.md  getting-started.md  index.md  troubleshooting.md
(+47 files in other folders)
